src/zenoh_dart.h

/// Copies a buffer into owned bytes.
///
/// @param bytes  Pointer to an uninitialized z_owned_bytes_t.
/// @param data   Pointer to the buffer data.
/// @param len    Length of the buffer in bytes.
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int zd_bytes_copy_from_buf(z_owned_bytes_t* bytes,
                                             const uint8_t* data, size_t len);
/// Clones owned bytes into a pre-allocated destination.
///
/// Loans the source, then calls z_bytes_clone() to produce an independent
/// copy that shares the underlying reference-counted data.
///
/// @param dst  Pointer to an uninitialized z_owned_bytes_t (cast to uint8_t*).
/// @param src  Pointer to a valid z_owned_bytes_t (cast to uint8_t*).
/// @return 0 on success.
FFI_PLUGIN_EXPORT int8_t zd_bytes_clone(uint8_t* dst, const uint8_t* src);
/// Returns the size of ze_owned_advanced_publisher_t in bytes.
FFI_PLUGIN_EXPORT size_t zd_advanced_publisher_sizeof(void);
/// Publishes data through the advanced publisher.
FFI_PLUGIN_EXPORT int zd_advanced_publisher_put(
    const ze_loaned_advanced_publisher_t* publisher,
    z_owned_bytes_t* payload,
    const char* encoding, size_t encoding_len,
    const char* encoding_schema, size_t encoding_schema_len,
    z_owned_bytes_t* attachment);
/// Sends a DELETE through the advanced publisher.
FFI_PLUGIN_EXPORT int zd_advanced_publisher_delete(
    const ze_loaned_advanced_publisher_t* publisher);
/// Reads whether any subscriber currently matches the advanced publisher's
/// key expression.
///
/// @param matching  Out-param, written 1/0 ONLY on rc 0. On any error it is
///                  left untouched, mirroring canon's own contract
///                  ("in this case matching_status is not updated").
/// @return canon's rc verbatim: 0 on success, negative on a canon failure.
///         This entry adds no failure code of its own.
FFI_PLUGIN_EXPORT int zd_advanced_publisher_get_matching_status(
    const ze_loaned_advanced_publisher_t* publisher,
    int* matching);
/// Declares a background matching listener on the advanced publisher.
///
/// Posts an int64 1/0 to @p dart_port on every matching-status transition.
/// Canon binds the listener's lifetime to the PUBLISHER: it runs until the
/// corresponding advanced publisher is dropped.
///
/// @return 0 on success; canon's own negative code on a canon failure;
///         ZD_DECLARE_EALLOC (11) if the context allocation fails, in which
///         case nothing was declared. Positive because canon owns 0-and-
///         negative on this channel.
FFI_PLUGIN_EXPORT int zd_advanced_publisher_declare_background_matching_listener(
    const ze_loaned_advanced_publisher_t* publisher,
    int64_t dart_port);
/// Obtains a const loaned reference to the advanced publisher.
FFI_PLUGIN_EXPORT const ze_loaned_advanced_publisher_t* zd_advanced_publisher_loan(
    const ze_owned_advanced_publisher_t* publisher);
/// Drops (undeclares and frees) an advanced publisher.
FFI_PLUGIN_EXPORT void zd_advanced_publisher_drop(
    ze_owned_advanced_publisher_t* publisher);
// ---------------------------------------------------------------------------
// Advanced Subscriber
// ---------------------------------------------------------------------------

/// Returns the size of ze_owned_advanced_subscriber_t in bytes.
FFI_PLUGIN_EXPORT size_t zd_advanced_subscriber_sizeof(void);
/// Declares a background sample miss listener on the advanced subscriber.
FFI_PLUGIN_EXPORT int zd_advanced_subscriber_declare_background_sample_miss_listener(
    const ze_loaned_advanced_subscriber_t* subscriber,
    int64_t dart_port);
/// Declares a background subscriber on the liveliness tokens of matching
/// advanced publishers that enable publisher detection.
///
/// Posts ordinary sample arrays to @p dart_port — PUT-kind on a publisher's
/// appearance, DELETE-kind on its disappearance — and posts a NULL sentinel
/// from its drop callback so the Dart side can complete the stream.
///
/// Canon binds this listener's lifetime to the SESSION: it runs until the
/// corresponding session is closed or dropped, outliving the advanced
/// subscriber it was declared on.
///
/// @param history  **-1 means UNSPECIFIED**: NULL options are passed and
///                 canon's own default applies (history = false). 0 or 1
///                 fills `z_liveliness_subscriber_options_t.history`.
/// @return 0 on success; canon's own negative code on a canon failure;
///         ZD_DECLARE_EALLOC (11) if the context allocation fails, in which
///         case nothing was declared and no sentinel will arrive.
FFI_PLUGIN_EXPORT int zd_advanced_subscriber_detect_publishers_background(
    const ze_loaned_advanced_subscriber_t* subscriber,
    int64_t dart_port,
    int history,
    int retain_payload);
/// Obtains a const loaned reference to the advanced subscriber.
FFI_PLUGIN_EXPORT const ze_loaned_advanced_subscriber_t* zd_advanced_subscriber_loan(
    const ze_owned_advanced_subscriber_t* subscriber);
/// Drops (undeclares and frees) an advanced subscriber.
FFI_PLUGIN_EXPORT void zd_advanced_subscriber_drop(
    ze_owned_advanced_subscriber_t* subscriber);