package/lib/src/bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import, unused_element, deprecated_member_use_from_same_package
import 'dart:ffi' as ffi;

/// Auto-generated FFI bindings for zenoh_dart C shim.
class ZenohDartBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  ZenohDartBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  ZenohDartBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  /// Declares a background matching listener on the advanced publisher.
  ///
  /// Posts an int64 1/0 to @p dart_port on every matching-status transition.
  /// Canon binds the listener's lifetime to the PUBLISHER: it runs until the
  /// corresponding advanced publisher is dropped.
  ///
  /// @return 0 on success; canon's own negative code on a canon failure;
  /// ZD_DECLARE_EALLOC (11) if the context allocation fails, in which
  /// case nothing was declared. Positive because canon owns 0-and-
  /// negative on this channel.
  int zd_advanced_publisher_declare_background_matching_listener(
    ffi.Pointer<ffi.Opaque> publisher,
    int dart_port,
  ) {
    return _zd_advanced_publisher_declare_background_matching_listener(
      publisher,
      dart_port,
    );
  }

  late final _zd_advanced_publisher_declare_background_matching_listenerPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Opaque>, ffi.Int64)>
      >('zd_advanced_publisher_declare_background_matching_listener');
  late final _zd_advanced_publisher_declare_background_matching_listener =
      _zd_advanced_publisher_declare_background_matching_listenerPtr
          .asFunction<int Function(ffi.Pointer<ffi.Opaque>, int)>();

  /// Sends a DELETE through the advanced publisher.
  int zd_advanced_publisher_delete(
    ffi.Pointer<ffi.Opaque> publisher,
  ) {
    return _zd_advanced_publisher_delete(
      publisher,
    );
  }

  late final _zd_advanced_publisher_deletePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Opaque>)>>(
        'zd_advanced_publisher_delete',
      );
  late final _zd_advanced_publisher_delete = _zd_advanced_publisher_deletePtr
      .asFunction<int Function(ffi.Pointer<ffi.Opaque>)>();

  /// Drops (undeclares and frees) an advanced publisher.
  void zd_advanced_publisher_drop(
    ffi.Pointer<ffi.Opaque> publisher,
  ) {
    return _zd_advanced_publisher_drop(
      publisher,
    );
  }

  late final _zd_advanced_publisher_dropPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Opaque>)>>(
        'zd_advanced_publisher_drop',
      );
  late final _zd_advanced_publisher_drop = _zd_advanced_publisher_dropPtr
      .asFunction<void Function(ffi.Pointer<ffi.Opaque>)>();

  /// Reads whether any subscriber currently matches the advanced publisher's
  /// key expression.
  ///
  /// @param matching  Out-param, written 1/0 ONLY on rc 0. On any error it is
  /// left untouched, mirroring canon's own contract
  /// ("in this case matching_status is not updated").
  /// @return canon's rc verbatim: 0 on success, negative on a canon failure.
  /// This entry adds no failure code of its own.
  int zd_advanced_publisher_get_matching_status(
    ffi.Pointer<ffi.Opaque> publisher,
    ffi.Pointer<ffi.Int> matching,
  ) {
    return _zd_advanced_publisher_get_matching_status(
      publisher,
      matching,
    );
  }

  late final _zd_advanced_publisher_get_matching_statusPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Int>)
        >
      >('zd_advanced_publisher_get_matching_status');
  late final _zd_advanced_publisher_get_matching_status =
      _zd_advanced_publisher_get_matching_statusPtr
          .asFunction<
            int Function(ffi.Pointer<ffi.Opaque>, ffi.Pointer<ffi.Int>)
          >();

  /// Obtains a const loaned reference to the advanced publisher.
  ffi.Pointer<ffi.Opaque> zd_advanced_publisher_loan(
    ffi.Pointer<ffi.Opaque> publisher,
  ) {
    return _zd_advanced_publisher_loan(
      publisher,
    );
  }

  late final _zd_advanced_publisher_loanPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)
        >
      >('zd_advanced_publisher_loan');
  late final _zd_advanced_publisher_loan = _zd_advanced_publisher_loanPtr
      .asFunction<ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)>();

  /// Publishes data through the advanced publisher.
  int zd_advanced_publisher_put(
    ffi.Pointer<ffi.Opaque> publisher,
    ffi.Pointer<ffi.Opaque> payload,
    ffi.Pointer<ffi.Char> encoding,
    int encoding_len,
    ffi.Pointer<ffi.Char> encoding_schema,
    int encoding_schema_len,
    ffi.Pointer<ffi.Opaque> attachment,
  ) {
    return _zd_advanced_publisher_put(
      publisher,
      payload,
      encoding,
      encoding_len,
      encoding_schema,
      encoding_schema_len,
      attachment,
    );
  }

  late final _zd_advanced_publisher_putPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Char>,
            ffi.Size,
            ffi.Pointer<ffi.Char>,
            ffi.Size,
            ffi.Pointer<ffi.Opaque>,
          )
        >
      >('zd_advanced_publisher_put');
  late final _zd_advanced_publisher_put = _zd_advanced_publisher_putPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Opaque>,
          ffi.Pointer<ffi.Opaque>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Opaque>,
        )
      >();

  /// Returns the size of ze_owned_advanced_publisher_t in bytes.
  int zd_advanced_publisher_sizeof() {
    return _zd_advanced_publisher_sizeof();
  }

  late final _zd_advanced_publisher_sizeofPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function()>>(
        'zd_advanced_publisher_sizeof',
      );
  late final _zd_advanced_publisher_sizeof = _zd_advanced_publisher_sizeofPtr
      .asFunction<int Function()>();

  /// Declares a background sample miss listener on the advanced subscriber.
  int zd_advanced_subscriber_declare_background_sample_miss_listener(
    ffi.Pointer<ffi.Opaque> subscriber,
    int dart_port,
  ) {
    return _zd_advanced_subscriber_declare_background_sample_miss_listener(
      subscriber,
      dart_port,
    );
  }

  late final _zd_advanced_subscriber_declare_background_sample_miss_listenerPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Opaque>, ffi.Int64)>
      >('zd_advanced_subscriber_declare_background_sample_miss_listener');
  late final _zd_advanced_subscriber_declare_background_sample_miss_listener =
      _zd_advanced_subscriber_declare_background_sample_miss_listenerPtr
          .asFunction<int Function(ffi.Pointer<ffi.Opaque>, int)>();

  /// Declares a background subscriber on the liveliness tokens of matching
  /// advanced publishers that enable publisher detection.
  ///
  /// Posts ordinary sample arrays to @p dart_port — PUT-kind on a publisher's
  /// appearance, DELETE-kind on its disappearance — and posts a NULL sentinel
  /// from its drop callback so the Dart side can complete the stream.
  ///
  /// Canon binds this listener's lifetime to the SESSION: it runs until the
  /// corresponding session is closed or dropped, outliving the advanced
  /// subscriber it was declared on.
  ///
  /// @param history  **-1 means UNSPECIFIED**: NULL options are passed and
  /// canon's own default applies (history = false). 0 or 1
  /// fills `z_liveliness_subscriber_options_t.history`.
  /// @return 0 on success; canon's own negative code on a canon failure;
  /// ZD_DECLARE_EALLOC (11) if the context allocation fails, in which
  /// case nothing was declared and no sentinel will arrive.
  int zd_advanced_subscriber_detect_publishers_background(
    ffi.Pointer<ffi.Opaque> subscriber,
    int dart_port,
    int history,
    int retain_payload,
  ) {
    return _zd_advanced_subscriber_detect_publishers_background(
      subscriber,
      dart_port,
      history,
      retain_payload,
    );
  }

  late final _zd_advanced_subscriber_detect_publishers_backgroundPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Opaque>, ffi.Int64, ffi.Int, ffi.Int)
        >
      >('zd_advanced_subscriber_detect_publishers_background');
  late final _zd_advanced_subscriber_detect_publishers_background =
      _zd_advanced_subscriber_detect_publishers_backgroundPtr
          .asFunction<int Function(ffi.Pointer<ffi.Opaque>, int, int, int)>();

  /// Drops (undeclares and frees) an advanced subscriber.
  void zd_advanced_subscriber_drop(
    ffi.Pointer<ffi.Opaque> subscriber,
  ) {
    return _zd_advanced_subscriber_drop(
      subscriber,
    );
  }

  late final _zd_advanced_subscriber_dropPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Opaque>)>>(
        'zd_advanced_subscriber_drop',
      );
  late final _zd_advanced_subscriber_drop = _zd_advanced_subscriber_dropPtr
      .asFunction<void Function(ffi.Pointer<ffi.Opaque>)>();

  /// Obtains a const loaned reference to the advanced subscriber.
  ffi.Pointer<ffi.Opaque> zd_advanced_subscriber_loan(
    ffi.Pointer<ffi.Opaque> subscriber,
  ) {
    return _zd_advanced_subscriber_loan(
      subscriber,
    );
  }

  late final _zd_advanced_subscriber_loanPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)
        >
      >('zd_advanced_subscriber_loan');
  late final _zd_advanced_subscriber_loan = _zd_advanced_subscriber_loanPtr
      .asFunction<ffi.Pointer<ffi.Opaque> Function(ffi.Pointer<ffi.Opaque>)>();

  /// Returns the size of ze_owned_advanced_subscriber_t in bytes.
  int zd_advanced_subscriber_sizeof() {
    return _zd_advanced_subscriber_sizeof();
  }

  late final _zd_advanced_subscriber_sizeofPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function()>>(
        'zd_advanced_subscriber_sizeof',
      );
  late final _zd_advanced_subscriber_sizeof = _zd_advanced_subscriber_sizeofPtr
      .asFunction<int Function()>();

  /// Clones owned bytes into a pre-allocated destination.
  ///
  /// Loans the source, then calls z_bytes_clone() to produce an independent
  /// copy that shares the underlying reference-counted data.
  ///
  /// @param dst  Pointer to an uninitialized z_owned_bytes_t (cast to uint8_t*).
  /// @param src  Pointer to a valid z_owned_bytes_t (cast to uint8_t*).
  /// @return 0 on success.
  int zd_bytes_clone(
    ffi.Pointer<ffi.Uint8> dst,
    ffi.Pointer<ffi.Uint8> src,
  ) {
    return _zd_bytes_clone(
      dst,
      src,
    );
  }

  late final _zd_bytes_clonePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Uint8>)
        >
      >('zd_bytes_clone');
  late final _zd_bytes_clone = _zd_bytes_clonePtr
      .asFunction<
        int Function(ffi.Pointer<ffi.Uint8>, ffi.Pointer<ffi.Uint8>)
      >();

  /// Copies a buffer into owned bytes.
  ///
  /// @param bytes  Pointer to an uninitialized z_owned_bytes_t.
  /// @param data   Pointer to the buffer data.
  /// @param len    Length of the buffer in bytes.
  /// @return 0 on success, negative on failure.
  int zd_bytes_copy_from_buf(
    ffi.Pointer<ffi.Opaque> bytes,
    ffi.Pointer<ffi.Uint8> data,
    int len,
  ) {
    return _zd_bytes_copy_from_buf(
      bytes,
      data,
      len,
    );
  }
